--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/mongoose": "^9.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/swagger": "^5.0.9",
+    "mongoose": "^6.0.9",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
@@ -37,6 +39,7 @@
     "@nestjs/testing": "^7.0.0",
     "@types/express": "^4.17.3",
     "@types/jest": "26.0.10",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^13.9.1",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.9.1",
