--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
     "@types/express": "^4.17.3",
+    "@types/faker": "^5.5.8",
     "@types/jest": "26.0.10",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^13.9.1",
@@ -47,7 +48,10 @@
     "eslint": "7.7.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
+    "faker": "^5.5.3",
     "jest": "26.4.2",
+    "mongodb-memory-server": "^7.4.3",
+    "nestjs-command": "^3.0.2",
     "prettier": "^1.19.1",
     "supertest": "^4.0.2",
     "ts-jest": "26.2.0",
