--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "husky": "^7.0.2",
     "jest": "^26.6.3",
     "mongodb-memory-server": "^7.1.0",
     "nestjs-command": "^2.0.0",
@@ -94,5 +95,11 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn test",
+      "pre-push": "yarn test"
+    }
   }
 }
