testing husky config

--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "yarn test",
+      "pre-commit": "yarn lint",
       "pre-push": "yarn test"
     }
   }
