update in package.json husky

--- a/package.json
+++ b/package.json
@@ -3,8 +3,15 @@
   "version": "0.0.1",
   "description": "",
   "author": "",
-  "private": false,
+  "private": true,
   "license": "UNLICENSED",
+  "husky": {
+    "hooks": {
+      "pre-commit":"echo 'Husky Test'",
+      "pre-push": "yarn test",
+      "...": "..."
+    }
+  },
   "scripts": {
     "prepare": "husky install",
     "prebuild": "rimraf dist",
@@ -23,13 +30,6 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.config.js",
     "generate": "plop"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit":"echo 'Husky Test'",
-      "pre-push": "yarn test",
-      "...": "..."
-    }
   },
   "dependencies": {
     "@nestjs/common": "^7.6.15",
