--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "echo 'Olá Mundo' ",
-      "pre-push": "yarn test",
+      "pre-push": "echo 'test'",
       "...": "..."
     }
   },
